# headerdoc

./: Cargo.toml
crates/tree-sitter-headerdoc/: .gitignore  Cargo.toml  Makefile  Package.swift  binding.gyp  grammar.js  package-lock.json  package.json  pyproject.toml  setup.py
crates/tree-sitter-headerdoc/bindings/c/: tree-sitter-headerdoc.h  tree-sitter-headerdoc.pc.in
crates/tree-sitter-headerdoc/bindings/go/: binding.go  binding_test.go  go.mod
crates/tree-sitter-headerdoc/bindings/node/: binding.cc
crates/tree-sitter-headerdoc/bindings/python/tree_sitter_headerdoc/: __init__.py  binding.c
crates/tree-sitter-headerdoc/bindings/rust/: build.rs  lib.rs
crates/tree-sitter-headerdoc/src/: grammar.json  node-types.json  parser.c  scanner.c
crates/tree-sitter-headerdoc/test/corpus/: multi_line.txt  multi_line2.txt  multi_line3.txt  multi_line4.txt  multi_line5.txt  multi_line6.txt  multi_line7.txt  single_line.txt  single_line2.txt  single_line3.txt  single_line4.txt  single_line5.txt
src/: main.rs  nodes.rs  rustdoc.rs
