[package]
name = "headerdoc"
version = "0.1.0"
edition = "2021"

[workspace]

members = [
    "crates/corasicc",
]

[dependencies]
tree-sitter-headerdoc = { path = "crates/tree-sitter-headerdoc" }
tree-sitter = "0.22"
regex = "1.10.5"
anyhow = "1.0.86"
env_logger = "0.11.3"
log = "0.4.21"
lazy_static = "1.5.0"
baz-tree-sitter-traversal = "0.1.3"
tree-sitter-doxygen = { path = "../tree-sitter-doxygen" }

[build-dependencies]
cc="*"
